* fixes Login and Signup position * adds login error * adds OverlappedBoxes to Login and Signup

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,12 +36,3 @@
         transform: rotate(360deg);
     }
 }
-
-#background {
-    /* background-image: url('./public/background/5.jpg'); */
-    background-color: #ffffff;
-    background-position: cover;
-    background-size: cover;
-    height: 87%;
-    backdrop-filter: sepia(20%);
-}
