--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,7 +15,3 @@ body {
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
-
-#root {
-    height: 100%;
-}
